--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,19 +2,17 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Des livres pour tous</title>
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/server.js"></script>
-    <script></script>
+    <script src="assets/js/query.js" defer></script>
 </head>
 <body>
     <header></header>
-    <h1>hello word</h1>
-    <p>test</p>
     <main>
-        <div class="books__container">
-
+        <h1>Des livres pour tous</h1>
+        <div class="books">
+            
         </div>
     </main>
     <footer></footer>
