SearchBar author page

--- a/frontend/authors.html
+++ b/frontend/authors.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Des livres pour tous</title>
+    <title>Les autheurs - Des livres pour tous</title>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <script type="module" src="assets/js/books.js" defer></script>
+    <script type="module" src="assets/js/authors.js" defer></script>
 </head>
 <body class="container">
     <header>
@@ -16,17 +16,14 @@
               <li><strong>Des livres pour tous</strong></li>
             </ul>
             <ul>
-              <li><a href="/frontend">Accueil</a></li>
-              <li><a href="/frontend/authors.html" class="secondary">Auteurs</a></li>
+              <li><a href="/frontend" class="secondary">Accueil</a></li>
+              <li><a href="/frontend/authors.html">Auteurs</a></li>
             </ul>
           </nav>
     </header>
     <main>
-        <h1>Nos derniers livres</h1>
-        <div class="books grid">
-            
-        </div>
+        <input type="search" id="search" name="search" placeholder="Chercher un auteur">
+        <div class="authors grid"></div>
     </main>
-    <footer></footer>
 </body>
 </html>
