--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
     </header>
     <main>
         <h1>Nos derniers livres</h1>
+        <input type="search" id="search" name="search" placeholder="Chercher un livre">
         <div class="books grid">
             
         </div>
